tests/fixtures/invalid/w007/orphan_event.spec
event orphan_notification "Orphan Notification" {
  payload {
    message string
  }
}
